# tylpet

./: .gitignore  AGENTS.md  CHANGELOG.md  HANDBOOK.md  README.md  index.html  package-lock.json  package.json  settings.html  vite.config.ts  计划.md
docs/: Agent工具扩展指南.md  M12-受控LLMAgent验收报告.md  M13-B系统音乐反应验收报告.md  M13-C创作者插件验收报告.md  M15-记忆与羁绊验收报告.md  M16-P0预览发布验收报告.md  M8-P0实施手册.md  M8-P0验收报告.md  M8-P2实施计划.md  M8-P2验收报告.md  M8-P4验收报告.md  SVG动画编辑器方案.md  kimi-k3-editor-refactor-prompt.md  kimi-k3-editor-visual-overhaul.md
docs/plugin/: ltypet.plugin.schema.v1.json  observation-event.schema.v1.json
examples/plugins/dev-agent-hooks/: README.md  emit.ps1  ltypet.plugin.json
scripts/: release-check.mjs  release-tag.mjs  version.mjs
src/: App.css  settings-window.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: chat.rs  lib.rs  main.rs  memory.rs  plugins.rs  secrets.rs
src/assets/: p0-wave.motion.json
src/components/: AgentRuntimeBridge.tsx  ChatWindow.tsx  DebugConsole.tsx  MemorySettingsPanel.tsx  ObservationRuntimeBridge.tsx  PluginSettingsPanel.tsx  SettingsWindow.tsx  TianyiArtwork.tsx  TianyiPet.tsx
src/config/: agent.ts  petAnimation.ts
src/controllers/: MemoryController.ts  SecureKeyStore.ts  SettingsStore.ts  TauriAgentActionClient.ts
src/domain/actions/: types.test.ts  types.ts
src/domain/agent/: policy.test.ts  (+6 more)
src/hooks/: usePetMotion.ts  useSettings.ts
src/providers/: MockChatProvider.test.ts  MockChatProvider.ts  TauriOpenAICompatibleProvider.test.ts  TauriOpenAICompatibleProvider.ts
src/styles/: ChatWindow.css
tools/artwork/: build-artwork.mjs
tools/motion-editor/: RELEASE.md  debug_jsdom.mjs  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
tools/motion-editor/src-tauri/: Cargo.toml  tauri.conf.json
tools/motion-editor/src-tauri/capabilities/: default.json
tools/motion-editor/src-tauri/src/: commands.rs  lib.rs  main.rs  models.rs  project_io.rs  publish.rs  recovery.rs
tools/plugin-sdk/: README.md  index.d.ts  mock-host.mjs
(+109 files in other folders)
